--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
+    "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
     "uuid": "^10.0.0"
   },
